--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ghost",
-    "version": "0.2.2-47",
+    "version": "0.3.0",
     "private": true,
     "scripts": {
         "start": "node index",
